Add persistent storage management card to profile

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -44,5 +44,40 @@
   "theme.system": "System",
   "lang.pt": "Portuguese",
   "lang.en": "English",
-  "lang.es": "Spanish"
+  "lang.es": "Spanish",
+  "storage.card.title": "Local storage",
+  "storage.status.label": "Status:",
+  "storage.status.checking": "Checking availability…",
+  "storage.status.ready": "Available",
+  "storage.status.unsupported": "Unavailable in this browser",
+  "storage.status.error": "Unavailable: {message}",
+  "storage.summary.label": "Saved projects:",
+  "storage.summary.empty": "No projects found.",
+  "storage.list.item": "{name} — updated on {date}",
+  "storage.spinner.label": "Working…",
+  "storage.actions.export": "Export backup",
+  "storage.actions.import": "Import backup",
+  "storage.actions.wipe": "Clear all",
+  "storage.actions.ensure": "Request persistent storage",
+  "storage.feedback.unavailable": "Local storage is unavailable.",
+  "storage.feedback.initError": "Unable to initialize storage: {reason}",
+  "storage.feedback.pingFailed": "Storage seems unstable: {reason}",
+  "storage.feedback.exportSuccess": "Backup exported ({count} projects).",
+  "storage.feedback.exportError": "Failed to export backup: {reason}",
+  "storage.feedback.importSuccess": "Backup imported ({count} projects restored).",
+  "storage.feedback.importError": "Failed to import backup: {reason}",
+  "storage.feedback.wipeSuccess": "All projects were removed.",
+  "storage.feedback.wipeError": "Failed to clear projects: {reason}",
+  "storage.feedback.persistenceSuccess": "Persistence granted for this browser.",
+  "storage.feedback.persistenceDenied": "Could not obtain persistence right now.",
+  "storage.feedback.persistenceUnsupported": "Persistence is not supported in this browser.",
+  "storage.feedback.persistenceError": "Error while requesting persistence: {reason}",
+  "storage.feedback.refreshError": "Unable to refresh project list: {reason}",
+  "storage.errors.unknown": "Unknown error.",
+  "storage.errors.quota": "Storage quota exceeded.",
+  "storage.errors.notAllowed": "The browser denied permission.",
+  "storage.errors.aborted": "Operation aborted.",
+  "storage.errors.invalidJson": "Invalid backup file.",
+  "storage.errors.generic": "{message}",
+  "storage.errors.ping": "Could not verify database availability."
 }
