--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -44,5 +44,40 @@
   "theme.system": "Automático",
   "lang.pt": "Portugués",
   "lang.en": "Inglés",
-  "lang.es": "Español"
+  "lang.es": "Español",
+  "storage.card.title": "Almacenamiento local",
+  "storage.status.label": "Estado:",
+  "storage.status.checking": "Verificando disponibilidad…",
+  "storage.status.ready": "Disponible",
+  "storage.status.unsupported": "No disponible en este navegador",
+  "storage.status.error": "No disponible: {message}",
+  "storage.summary.label": "Proyectos guardados:",
+  "storage.summary.empty": "No se encontraron proyectos.",
+  "storage.list.item": "{name} — actualizado el {date}",
+  "storage.spinner.label": "Procesando…",
+  "storage.actions.export": "Exportar copia de seguridad",
+  "storage.actions.import": "Importar copia de seguridad",
+  "storage.actions.wipe": "Borrar todo",
+  "storage.actions.ensure": "Solicitar almacenamiento persistente",
+  "storage.feedback.unavailable": "El almacenamiento local no está disponible.",
+  "storage.feedback.initError": "No se pudo inicializar el almacenamiento: {reason}",
+  "storage.feedback.pingFailed": "El almacenamiento parece inestable: {reason}",
+  "storage.feedback.exportSuccess": "Copia de seguridad exportada ({count} proyectos).",
+  "storage.feedback.exportError": "No se pudo exportar la copia de seguridad: {reason}",
+  "storage.feedback.importSuccess": "Copia de seguridad importada ({count} proyectos restaurados).",
+  "storage.feedback.importError": "No se pudo importar la copia de seguridad: {reason}",
+  "storage.feedback.wipeSuccess": "Todos los proyectos fueron eliminados.",
+  "storage.feedback.wipeError": "No se pudieron borrar los proyectos: {reason}",
+  "storage.feedback.persistenceSuccess": "Persistencia concedida para este navegador.",
+  "storage.feedback.persistenceDenied": "No fue posible obtener persistencia ahora.",
+  "storage.feedback.persistenceUnsupported": "La persistencia no es compatible en este navegador.",
+  "storage.feedback.persistenceError": "Error al solicitar persistencia: {reason}",
+  "storage.feedback.refreshError": "No se pudo actualizar la lista de proyectos: {reason}",
+  "storage.errors.unknown": "Error desconocido.",
+  "storage.errors.quota": "Cuota de almacenamiento excedida.",
+  "storage.errors.notAllowed": "El navegador negó el permiso.",
+  "storage.errors.aborted": "Operación cancelada.",
+  "storage.errors.invalidJson": "Archivo de copia de seguridad inválido.",
+  "storage.errors.generic": "{message}",
+  "storage.errors.ping": "No fue posible verificar la disponibilidad de la base de datos."
 }
