--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -45,5 +45,40 @@
   "theme.system": "Automático",
   "lang.pt": "Português",
   "lang.en": "Inglês",
-  "lang.es": "Espanhol"
+  "lang.es": "Espanhol",
+  "storage.card.title": "Armazenamento local",
+  "storage.status.label": "Estado:",
+  "storage.status.checking": "Verificando disponibilidade…",
+  "storage.status.ready": "Disponível",
+  "storage.status.unsupported": "Indisponível no navegador",
+  "storage.status.error": "Indisponível: {message}",
+  "storage.summary.label": "Projetos salvos:",
+  "storage.summary.empty": "Nenhum projeto encontrado.",
+  "storage.list.item": "{name} — atualizado em {date}",
+  "storage.spinner.label": "Processando…",
+  "storage.actions.export": "Exportar backup",
+  "storage.actions.import": "Importar backup",
+  "storage.actions.wipe": "Limpar tudo",
+  "storage.actions.ensure": "Solicitar armazenamento persistente",
+  "storage.feedback.unavailable": "Armazenamento local indisponível.",
+  "storage.feedback.initError": "Não foi possível inicializar o armazenamento: {reason}",
+  "storage.feedback.pingFailed": "Armazenamento com instabilidade: {reason}",
+  "storage.feedback.exportSuccess": "Backup exportado com sucesso ({count} projetos).",
+  "storage.feedback.exportError": "Falha ao exportar backup: {reason}",
+  "storage.feedback.importSuccess": "Backup importado com sucesso ({count} projetos restaurados).",
+  "storage.feedback.importError": "Falha ao importar backup: {reason}",
+  "storage.feedback.wipeSuccess": "Todos os projetos foram removidos.",
+  "storage.feedback.wipeError": "Falha ao limpar projetos: {reason}",
+  "storage.feedback.persistenceSuccess": "Persistência garantida para este navegador.",
+  "storage.feedback.persistenceDenied": "Não foi possível obter persistência agora.",
+  "storage.feedback.persistenceUnsupported": "Persistência não é suportada neste navegador.",
+  "storage.feedback.persistenceError": "Erro ao solicitar persistência: {reason}",
+  "storage.feedback.refreshError": "Não foi possível atualizar a lista de projetos: {reason}",
+  "storage.errors.unknown": "Erro desconhecido.",
+  "storage.errors.quota": "Limite de armazenamento excedido.",
+  "storage.errors.notAllowed": "Permissão negada pelo navegador.",
+  "storage.errors.aborted": "Operação cancelada.",
+  "storage.errors.invalidJson": "Arquivo de backup inválido.",
+  "storage.errors.generic": "{message}",
+  "storage.errors.ping": "Não foi possível verificar a disponibilidade do banco de dados."
 }
