Keep footer visible with revision metadata

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -62,5 +62,7 @@
   "theme.system": "System",
   "lang.pt": "Portuguese",
   "lang.en": "English",
-  "lang.es": "Spanish"
+  "lang.es": "Spanish",
+  "footer.revision": "{appName} · Revision {revision} (v{version})",
+  "footer.revisionFallback": "{appName} · Revision unavailable"
 }
