--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -24,6 +24,8 @@
   "panel.actions.login": "Acessar",
   "panel.actions.register": "Criar conta",
   "footer.copyright": "2024 Organização Exemplo",
+  "footer.revision": "{appName} · Revisão {revision} (v{version})",
+  "footer.revisionFallback": "{appName} · Revisão indisponível",
   "auth.login.title": "Acessar conta",
   "auth.login.submit": "Entrar",
   "auth.login.switch": "Entrar com outro usuário",
