Document Base Shell validation checks

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -64,5 +64,6 @@
   "lang.en": "English",
   "lang.es": "Spanish",
   "footer.revision": "{appName} · Revision {revision} (v{version})",
-  "footer.revisionFallback": "{appName} · Revision unavailable"
+  "footer.revisionFallback": "{appName} · Revision unavailable",
+  "footer.revisionLog": "View revision log"
 }
