--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -64,5 +64,6 @@
   "lang.en": "Inglés",
   "lang.es": "Español",
   "footer.revision": "{appName} · Revisión {revision} (v{version})",
-  "footer.revisionFallback": "{appName} · Revisión no disponible"
+  "footer.revisionFallback": "{appName} · Revisión no disponible",
+  "footer.revisionLog": "Ver registro de revisiones"
 }
