--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -26,6 +26,7 @@
   "footer.copyright": "2024 Organização Exemplo",
   "footer.revision": "{appName} · Revisão {revision} (v{version})",
   "footer.revisionFallback": "{appName} · Revisão indisponível",
+  "footer.revisionLog": "Ver log de revisões",
   "auth.login.title": "Acessar conta",
   "auth.login.submit": "Entrar",
   "auth.login.switch": "Entrar com outro usuário",
