Refine shell layout scrolling

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -5,7 +5,6 @@
   "actions.toggleTheme": "Toggle theme",
   "actions.toggleLanguage": "Switch language",
   "actions.profile": "Profile",
-  "actions.switchUser": "Switch user",
   "actions.logout": "Sign out",
   "actions.openUserPanel": "Open user panel",
   "actions.openUserPanelWithName": "Open user panel for {name}",
@@ -25,13 +24,38 @@
   "panel.actions.register": "Create account",
   "auth.login.title": "Sign in",
   "auth.login.submit": "Sign in",
-  "auth.login.switch": "Use another account",
   "auth.register.title": "Create account",
   "auth.register.submit": "Register",
   "auth.profile.title": "Profile",
   "auth.profile.logout": "Log out",
   "auth.profile.delete": "Delete account",
   "auth.profile.deleteConfirm": "Are you sure you want to delete {name}'s account? This action cannot be undone.",
+  "auth.profile.userManagementTitle": "User management",
+  "auth.profile.userAdd": "Add user",
+  "auth.profile.userManagementDescription": "Review and manage every account stored on this device.",
+  "auth.profile.userTable.name": "Name",
+  "auth.profile.userTable.email": "Email",
+  "auth.profile.userTable.role": "Role",
+  "auth.profile.userTable.createdAt": "Created",
+  "auth.profile.userTable.actions": "Actions",
+  "auth.profile.userEmpty": "No users found.",
+  "auth.profile.userEdit": "Edit",
+  "auth.profile.userDuplicate": "Duplicate",
+  "auth.profile.userDelete": "Delete",
+  "auth.profile.userDeleteConfirm": "Do you want to remove {name}'s user? This action cannot be undone.",
+  "auth.profile.userDeleted": "User removed successfully.",
+  "auth.profile.userForm.title.create": "Add user",
+  "auth.profile.userForm.title.edit": "Edit user",
+  "auth.profile.userForm.title.duplicate": "Duplicate user",
+  "auth.profile.userForm.submit.create": "Add",
+  "auth.profile.userForm.submit.edit": "Save changes",
+  "auth.profile.userForm.submit.duplicate": "Duplicate",
+  "auth.profile.userForm.passwordHint": "Set a temporary password and share it with the new user.",
+  "auth.profile.userForm.passwordOptional": "Enter a new password to replace the current one.",
+  "auth.profile.userForm.emailPlaceholderDuplicate": "Provide an email different from {email}.",
+  "auth.profile.userCreated": "User {name} created successfully.",
+  "auth.profile.userDuplicated": "User {name} duplicated successfully.",
+  "auth.profile.userUpdated": "Details for {name} updated successfully.",
   "auth.profile.form.profileLegend": "Personal information",
   "auth.profile.form.passwordLegend": "Security",
   "auth.profile.form.updatePassword": "Update password",
@@ -46,7 +70,6 @@
   "auth.form.confirmPassword": "Confirm new password",
   "auth.feedback.registered": "Registration completed successfully.",
   "auth.feedback.loggedIn": "Signed in as {name}.",
-  "auth.feedback.switched": "Active user: {name}.",
   "auth.feedback.invalid": "Invalid credentials. Try again.",
   "auth.feedback.exists": "Email already registered.",
   "auth.feedback.required": "Please fill in all required fields.",
