--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -5,7 +5,6 @@
   "actions.toggleTheme": "Cambiar tema",
   "actions.toggleLanguage": "Cambiar idioma",
   "actions.profile": "Perfil",
-  "actions.switchUser": "Cambiar usuario",
   "actions.logout": "Cerrar sesión",
   "actions.openUserPanel": "Abrir panel de usuario",
   "actions.openUserPanelWithName": "Abrir panel de usuario de {name}",
@@ -25,13 +24,38 @@
   "panel.actions.register": "Crear cuenta",
   "auth.login.title": "Iniciar sesión",
   "auth.login.submit": "Ingresar",
-  "auth.login.switch": "Usar otra cuenta",
   "auth.register.title": "Crear cuenta",
   "auth.register.submit": "Registrar",
   "auth.profile.title": "Perfil",
   "auth.profile.logout": "Cerrar sesión",
   "auth.profile.delete": "Eliminar cuenta",
   "auth.profile.deleteConfirm": "¿Desea eliminar la cuenta de {name}? Esta acción no se puede deshacer.",
+  "auth.profile.userManagementTitle": "Gestión de usuarios",
+  "auth.profile.userAdd": "Agregar usuario",
+  "auth.profile.userManagementDescription": "Revise y administre todas las cuentas guardadas en este dispositivo.",
+  "auth.profile.userTable.name": "Nombre",
+  "auth.profile.userTable.email": "Correo electrónico",
+  "auth.profile.userTable.role": "Perfil",
+  "auth.profile.userTable.createdAt": "Creado",
+  "auth.profile.userTable.actions": "Acciones",
+  "auth.profile.userEmpty": "No hay usuarios registrados.",
+  "auth.profile.userEdit": "Editar",
+  "auth.profile.userDuplicate": "Duplicar",
+  "auth.profile.userDelete": "Eliminar",
+  "auth.profile.userDeleteConfirm": "¿Desea eliminar al usuario {name}? Esta acción no se puede deshacer.",
+  "auth.profile.userDeleted": "Usuario eliminado correctamente.",
+  "auth.profile.userForm.title.create": "Agregar usuario",
+  "auth.profile.userForm.title.edit": "Editar usuario",
+  "auth.profile.userForm.title.duplicate": "Duplicar usuario",
+  "auth.profile.userForm.submit.create": "Agregar",
+  "auth.profile.userForm.submit.edit": "Guardar cambios",
+  "auth.profile.userForm.submit.duplicate": "Duplicar",
+  "auth.profile.userForm.passwordHint": "Defina una contraseña temporal y compártala con el nuevo usuario.",
+  "auth.profile.userForm.passwordOptional": "Ingrese una nueva contraseña para reemplazar la actual.",
+  "auth.profile.userForm.emailPlaceholderDuplicate": "Ingrese un correo diferente a {email}.",
+  "auth.profile.userCreated": "Usuario {name} creado correctamente.",
+  "auth.profile.userDuplicated": "Usuario {name} duplicado correctamente.",
+  "auth.profile.userUpdated": "Datos de {name} actualizados correctamente.",
   "auth.profile.form.profileLegend": "Información personal",
   "auth.profile.form.passwordLegend": "Seguridad",
   "auth.profile.form.updatePassword": "Actualizar contraseña",
@@ -46,7 +70,6 @@
   "auth.form.confirmPassword": "Confirmar nueva contraseña",
   "auth.feedback.registered": "Registro completado con éxito.",
   "auth.feedback.loggedIn": "Sesión iniciada como {name}.",
-  "auth.feedback.switched": "Usuario activo: {name}.",
   "auth.feedback.invalid": "Credenciales inválidas. Intenta de nuevo.",
   "auth.feedback.exists": "Correo ya registrado.",
   "auth.feedback.required": "Complete todos los campos obligatorios.",
