--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -5,7 +5,6 @@
   "actions.toggleTheme": "Alternar tema",
   "actions.toggleLanguage": "Alternar idioma",
   "actions.profile": "Perfil",
-  "actions.switchUser": "Trocar usuário",
   "actions.logout": "Sair",
   "actions.openUserPanel": "Abrir painel do usuário",
   "actions.openUserPanelWithName": "Abrir painel do usuário de {name}",
@@ -29,13 +28,38 @@
   "footer.revisionLog": "Ver log de revisões",
   "auth.login.title": "Acessar conta",
   "auth.login.submit": "Entrar",
-  "auth.login.switch": "Entrar com outro usuário",
   "auth.register.title": "Criar conta",
   "auth.register.submit": "Registrar",
   "auth.profile.title": "Perfil",
   "auth.profile.logout": "Encerrar sessão",
   "auth.profile.delete": "Excluir conta",
   "auth.profile.deleteConfirm": "Tem certeza de que deseja excluir a conta de {name}? Esta ação não pode ser desfeita.",
+  "auth.profile.userManagementTitle": "Gestão de usuários",
+  "auth.profile.userAdd": "Adicionar usuário",
+  "auth.profile.userManagementDescription": "Visualize e administre todas as contas cadastradas neste dispositivo.",
+  "auth.profile.userTable.name": "Nome",
+  "auth.profile.userTable.email": "E-mail",
+  "auth.profile.userTable.role": "Perfil",
+  "auth.profile.userTable.createdAt": "Criado em",
+  "auth.profile.userTable.actions": "Ações",
+  "auth.profile.userEmpty": "Nenhum usuário cadastrado.",
+  "auth.profile.userEdit": "Editar",
+  "auth.profile.userDuplicate": "Duplicar",
+  "auth.profile.userDelete": "Excluir",
+  "auth.profile.userDeleteConfirm": "Deseja remover o usuário {name}? Essa ação não pode ser desfeita.",
+  "auth.profile.userDeleted": "Usuário removido com sucesso.",
+  "auth.profile.userForm.title.create": "Adicionar usuário",
+  "auth.profile.userForm.title.edit": "Editar usuário",
+  "auth.profile.userForm.title.duplicate": "Duplicar usuário",
+  "auth.profile.userForm.submit.create": "Adicionar",
+  "auth.profile.userForm.submit.edit": "Salvar alterações",
+  "auth.profile.userForm.submit.duplicate": "Duplicar",
+  "auth.profile.userForm.passwordHint": "Defina uma senha temporária e compartilhe com o novo usuário.",
+  "auth.profile.userForm.passwordOptional": "Informe uma nova senha para substituir a atual.",
+  "auth.profile.userForm.emailPlaceholderDuplicate": "Informe um e-mail diferente de {email}.",
+  "auth.profile.userCreated": "Usuário {name} cadastrado com sucesso.",
+  "auth.profile.userDuplicated": "Usuário {name} duplicado com sucesso.",
+  "auth.profile.userUpdated": "Dados de {name} atualizados com sucesso.",
   "auth.profile.form.profileLegend": "Dados pessoais",
   "auth.profile.form.passwordLegend": "Segurança",
   "auth.profile.form.updatePassword": "Atualizar senha",
@@ -50,7 +74,6 @@
   "auth.form.confirmPassword": "Confirmar nova senha",
   "auth.feedback.registered": "Cadastro realizado com sucesso.",
   "auth.feedback.loggedIn": "Sessão iniciada como {name}.",
-  "auth.feedback.switched": "Usuário ativo: {name}.",
   "auth.feedback.invalid": "Credenciais inválidas. Tente novamente.",
   "auth.feedback.exists": "E-mail já cadastrado.",
   "auth.feedback.required": "Preencha todos os campos obrigatórios.",
