--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -33,6 +33,8 @@
   "auth.profile.userManagementTitle": "Gestión de usuarios",
   "auth.profile.userAdd": "Agregar usuario",
   "auth.profile.userManagementDescription": "Revise y administre todas las cuentas guardadas en este dispositivo.",
+  "auth.profile.userPanelLoginRequired": "Inicie sesión para acceder a su panel.",
+  "auth.profile.userPanelOwnerOnly": "Solo los propietarios pueden administrar usuarios.",
   "auth.profile.userTable.name": "Nombre",
   "auth.profile.userTable.email": "Correo electrónico",
   "auth.profile.userTable.role": "Perfil",
