feat: add placeholder mini-app catalog

--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -14,12 +14,19 @@
   "nav.dashboard": "Inicio",
   "nav.activity": "Actividad",
   "nav.analytics": "Analítica",
+  "nav.miniapps": "Mini-apps",
+  "nav.miniapps.item1": "Mini-app 1",
+  "nav.miniapps.item2": "Mini-app 2",
   "nav.settings": "Configuraciones",
   "settings.language": "Idioma",
   "settings.theme": "Tema",
   "settings.userPanel": "Panel de usuario",
   "panel.welcomeTitle": "¡Bienvenido!",
   "panel.welcomeMessage": "Elige una opción del menú para comenzar a explorar tu mini app.",
+  "panel.miniapps.item1.title": "Bienvenido al Mini-app 1",
+  "panel.miniapps.item1.message": "Estás explorando el Mini-app 1.",
+  "panel.miniapps.item2.title": "Bienvenido al Mini-app 2",
+  "panel.miniapps.item2.message": "Estás explorando el Mini-app 2.",
   "panel.actions.login": "Ingresar",
   "panel.actions.register": "Crear cuenta",
   "auth.login.title": "Iniciar sesión",
