--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -14,12 +14,19 @@
   "nav.dashboard": "Início",
   "nav.activity": "Atividades",
   "nav.analytics": "Análises",
+  "nav.miniapps": "Mini-apps",
+  "nav.miniapps.item1": "Mini-app 1",
+  "nav.miniapps.item2": "Mini-app 2",
   "nav.settings": "Configurações",
   "settings.language": "Idioma",
   "settings.theme": "Tema",
   "settings.userPanel": "Painel do usuário",
   "panel.welcomeTitle": "Bem-vindo(a)!",
   "panel.welcomeMessage": "Selecione uma opção no menu para começar a explorar seu miniaplicativo.",
+  "panel.miniapps.item1.title": "Bem-vindo ao Mini-app 1",
+  "panel.miniapps.item1.message": "Você está visualizando o conteúdo do Mini-app 1.",
+  "panel.miniapps.item2.title": "Bem-vindo ao Mini-app 2",
+  "panel.miniapps.item2.message": "Você está visualizando o conteúdo do Mini-app 2.",
   "panel.actions.login": "Acessar",
   "panel.actions.register": "Criar conta",
   "footer.copyright": "2024 Organização Exemplo",
