--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -14,12 +14,19 @@
   "nav.dashboard": "Dashboard",
   "nav.activity": "Activity",
   "nav.analytics": "Analytics",
+  "nav.miniapps": "Mini-apps",
+  "nav.miniapps.item1": "Mini-app 1",
+  "nav.miniapps.item2": "Mini-app 2",
   "nav.settings": "Settings",
   "settings.language": "Language",
   "settings.theme": "Theme",
   "settings.userPanel": "User panel",
   "panel.welcomeTitle": "Welcome!",
   "panel.welcomeMessage": "Pick an option from the menu to start exploring your mini app.",
+  "panel.miniapps.item1.title": "Welcome to Mini-app 1",
+  "panel.miniapps.item1.message": "You're now exploring Mini-app 1.",
+  "panel.miniapps.item2.title": "Welcome to Mini-app 2",
+  "panel.miniapps.item2.message": "You're now exploring Mini-app 2.",
   "panel.actions.login": "Sign in",
   "panel.actions.register": "Create account",
   "auth.login.title": "Sign in",
