feat: load mini-app catalog from registry

--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -17,6 +17,8 @@
   "nav.miniapps": "Mini-apps",
   "nav.miniapps.item1": "Mini-app 1",
   "nav.miniapps.item2": "Mini-app 2",
+  "nav.miniapps.miniappOne": "Mini-app 1",
+  "nav.miniapps.miniappTwo": "Mini-app 2",
   "nav.settings": "Configurações",
   "settings.language": "Idioma",
   "settings.theme": "Tema",
