--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -17,6 +17,8 @@
   "nav.miniapps": "Mini-apps",
   "nav.miniapps.item1": "Mini-app 1",
   "nav.miniapps.item2": "Mini-app 2",
+  "nav.miniapps.miniappOne": "Mini-app 1",
+  "nav.miniapps.miniappTwo": "Mini-app 2",
   "nav.settings": "Settings",
   "settings.language": "Language",
   "settings.theme": "Theme",
