Add onboarding guidance and language cycling for base shell

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -33,6 +33,15 @@
   "panel.miniapps.item2.message": "You're now exploring Mini-app 2.",
   "panel.actions.login": "Sign in",
   "panel.actions.register": "Create account",
+  "onboarding.title": "Getting started",
+  "onboarding.description.empty": "There are no accounts on this device yet. Create the first one to access the dashboard.",
+  "onboarding.description.existing": "Accounts already exist on this device. Sign in with your credentials or ask an administrator for access.",
+  "onboarding.step.register": "Use \"Create account\" to register the first administrator.",
+  "onboarding.step.preferences": "Set your preferred language and theme for the experience.",
+  "onboarding.step.explore": "Open the mini-app catalog and try the available integrations.",
+  "onboarding.step.login": "Choose \"Sign in\" and enter the email and password you received.",
+  "onboarding.step.support": "Need help? Ask an administrator to create a new account from the user panel.",
+  "onboarding.tip": "Tip: after creating the first account you can invite others from the user panel.",
   "auth.login.title": "Sign in",
   "auth.login.submit": "Sign in",
   "auth.register.title": "Create account",
