Update overlay test flow and registration guard

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -10,6 +10,7 @@
   "actions.openUserMenuWithName": "Open user menu for {name}",
   "actions.openUserPanel": "Open user panel",
   "actions.openUserPanelWithName": "Open user panel for {name}",
+  "actions.close": "Close",
   "actions.toggleSidebar": "Toggle sidebar",
   "actions.save": "Save",
   "actions.cancel": "Cancel",
@@ -17,6 +18,8 @@
   "nav.activity": "Activity",
   "nav.analytics": "Analytics",
   "nav.miniapps": "Mini-apps",
+  "nav.overlay.title": "Navigation",
+  "nav.overlay.miniapps": "Mini-apps",
   "nav.miniapps.item1": "Mini-app 1",
   "nav.miniapps.item2": "Mini-app 2",
   "nav.miniapps.miniappOne": "Mini-app 1",
