--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -10,6 +10,7 @@
   "actions.openUserMenuWithName": "Abrir menú de usuario de {name}",
   "actions.openUserPanel": "Abrir panel de usuario",
   "actions.openUserPanelWithName": "Abrir panel de usuario de {name}",
+  "actions.close": "Cerrar",
   "actions.toggleSidebar": "Alternar barra lateral",
   "actions.save": "Guardar",
   "actions.cancel": "Cancelar",
@@ -17,6 +18,8 @@
   "nav.activity": "Actividad",
   "nav.analytics": "Analítica",
   "nav.miniapps": "Mini-apps",
+  "nav.overlay.title": "Navegación",
+  "nav.overlay.miniapps": "Mini-apps",
   "nav.miniapps.item1": "Mini-app 1",
   "nav.miniapps.item2": "Mini-app 2",
   "nav.miniapps.miniappOne": "Mini-app 1",
