--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -10,6 +10,7 @@
   "actions.openUserMenuWithName": "Abrir menu do usuário de {name}",
   "actions.openUserPanel": "Abrir painel do usuário",
   "actions.openUserPanelWithName": "Abrir painel do usuário de {name}",
+  "actions.close": "Fechar",
   "actions.toggleSidebar": "Alternar barra lateral",
   "actions.save": "Salvar",
   "actions.cancel": "Cancelar",
@@ -17,6 +18,8 @@
   "nav.activity": "Atividades",
   "nav.analytics": "Análises",
   "nav.miniapps": "Mini-apps",
+  "nav.overlay.title": "Navegação",
+  "nav.overlay.miniapps": "Mini-apps",
   "nav.miniapps.item1": "Mini-app 1",
   "nav.miniapps.item2": "Mini-app 2",
   "nav.miniapps.miniappOne": "Mini-app 1",
