Enhance login UX with new controls and session options

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -49,6 +49,14 @@
   "onboarding.tip": "Tip: after creating the first account you can invite others from the user panel.",
   "auth.login.title": "Sign in",
   "auth.login.submit": "Sign in",
+  "auth.login.remember": "Remember me",
+  "auth.login.forgot": "Forgot my password",
+  "auth.login.showPassword": "Show password",
+  "auth.login.hidePassword": "Hide password",
+  "auth.login.switchUser": "Switch account",
+  "auth.login.switchUserSuccess": "Previous session cleared. Enter the credentials for the new account.",
+  "auth.login.recoveryMessage": "Enter your e-mail above and we'll send password reset instructions.",
+  "auth.login.recoveryMessageWithEmail": "We'll send reset instructions to {email}.",
   "auth.register.title": "Create account",
   "auth.register.submit": "Register",
   "auth.profile.title": "Profile",
