--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -49,6 +49,14 @@
   "onboarding.tip": "Sugerencia: después de crear la primera cuenta podrás invitar a otras personas desde el panel de usuario.",
   "auth.login.title": "Iniciar sesión",
   "auth.login.submit": "Ingresar",
+  "auth.login.remember": "Recordarme",
+  "auth.login.forgot": "Olvidé mi contraseña",
+  "auth.login.showPassword": "Mostrar contraseña",
+  "auth.login.hidePassword": "Ocultar contraseña",
+  "auth.login.switchUser": "Cambiar de usuario",
+  "auth.login.switchUserSuccess": "Sesión anterior finalizada. Ingresa las credenciales de la nueva persona usuaria.",
+  "auth.login.recoveryMessage": "Ingresa tu correo arriba y te enviaremos instrucciones para restablecer la contraseña.",
+  "auth.login.recoveryMessageWithEmail": "Enviaremos instrucciones de restablecimiento a {email}.",
   "auth.register.title": "Crear cuenta",
   "auth.register.submit": "Registrar",
   "auth.profile.title": "Perfil",
