--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -53,6 +53,14 @@
   "footer.revisionLog": "Ver log de revisões",
   "auth.login.title": "Acessar conta",
   "auth.login.submit": "Entrar",
+  "auth.login.remember": "Lembrar-me",
+  "auth.login.forgot": "Esqueci minha senha",
+  "auth.login.showPassword": "Mostrar senha",
+  "auth.login.hidePassword": "Ocultar senha",
+  "auth.login.switchUser": "Trocar usuário",
+  "auth.login.switchUserSuccess": "Sessão anterior encerrada. Informe as credenciais da nova pessoa usuária.",
+  "auth.login.recoveryMessage": "Informe seu e-mail no campo acima e enviaremos instruções para redefinir a senha.",
+  "auth.login.recoveryMessageWithEmail": "Enviaremos instruções de redefinição para {email}.",
   "auth.register.title": "Criar conta",
   "auth.register.submit": "Registrar",
   "auth.profile.title": "Perfil",
