Refine user menu with modal overlay

--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -28,6 +28,7 @@
   "settings.language": "Idioma",
   "settings.theme": "Tema",
   "settings.userPanel": "Painel do usuário",
+  "settings.userMenuTitle": "Preferências do usuário",
   "language.dialog.title": "Preferências de idioma",
   "language.dialog.description": "Escolha o idioma da interface. As alterações são aplicadas imediatamente.",
   "panel.welcomeTitle": "Bem-vindo(a)!",
