--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -28,6 +28,7 @@
   "settings.language": "Language",
   "settings.theme": "Theme",
   "settings.userPanel": "User panel",
+  "settings.userMenuTitle": "User preferences",
   "language.dialog.title": "Language settings",
   "language.dialog.description": "Choose the interface language. Changes apply immediately.",
   "panel.welcomeTitle": "Welcome!",
