--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -28,6 +28,7 @@
   "settings.language": "Idioma",
   "settings.theme": "Tema",
   "settings.userPanel": "Panel de usuario",
+  "settings.userMenuTitle": "Preferencias del usuario",
   "language.dialog.title": "Preferencias de idioma",
   "language.dialog.description": "Elige el idioma de la interfaz. Los cambios se aplican de inmediato.",
   "panel.welcomeTitle": "¡Bienvenido!",
