Document Playwright setup fallback steps

--- a/miniapps/base_shell/i18n/en-us.json
+++ b/miniapps/base_shell/i18n/en-us.json
@@ -126,5 +126,39 @@
   "lang.es": "Spanish",
   "footer.revision": "{appName} · Revision {revision} (v{version})",
   "footer.revisionFallback": "{appName} · Revision unavailable",
-  "footer.revisionLog": "View revision log"
+  "footer.revisionLog": "View revision log",
+  "admin.gateway.inputLabel": "Administrative code",
+  "admin.dashboard.kicker": "Maintenance mode",
+  "admin.dashboard.title": "Command center",
+  "admin.dashboard.subtitle": "Unified view to keep the shell healthy and predictable.",
+  "admin.dashboard.section.overview": "Overview",
+  "admin.dashboard.metric.users": "Registered users",
+  "admin.dashboard.metric.users.trend": "{count} users stored on this device.",
+  "admin.dashboard.metric.owners": "Administrators",
+  "admin.dashboard.metric.owners.trend": "{percentage}% with admin privileges.",
+  "admin.dashboard.metric.miniapps": "Active mini-apps",
+  "admin.dashboard.metric.miniapps.trend": "{count} integrations visible in navigation.",
+  "admin.dashboard.metric.uptime": "Uptime",
+  "admin.dashboard.metric.uptime.trend": "{value}% in the last 24 hours.",
+  "admin.dashboard.metric.satisfaction": "Satisfaction",
+  "admin.dashboard.metric.satisfaction.trend": "+{points} pts vs. previous week.",
+  "admin.dashboard.section.health": "Operational health",
+  "admin.dashboard.health.incidents": "Incidents",
+  "admin.dashboard.health.incidents.none": "No incidents logged in the last 48 hours.",
+  "admin.dashboard.health.capacity": "Capacity",
+  "admin.dashboard.health.capacity.note": "Job queue running at {value}% capacity.",
+  "admin.dashboard.health.capacity.aria": "Current utilization at {value}%.",
+  "admin.dashboard.section.activity": "Recent activity",
+  "admin.dashboard.activity.anonymous": "User",
+  "admin.dashboard.activity.session": "Active session: {name}.",
+  "admin.dashboard.activity.userCreated": "Latest registration: {name}.",
+  "admin.dashboard.activity.activeMiniApp": "Focused mini-app: {name}.",
+  "admin.dashboard.activity.environmentReady": "Monitoring running without alerts.",
+  "admin.dashboard.activity.placeholder": "Recent events will appear here once available.",
+  "admin.dashboard.action.refresh": "Refresh metrics",
+  "admin.dashboard.action.openLogs": "Open logs",
+  "admin.dashboard.action.manageApps": "Manage mini-apps",
+  "admin.dashboard.status.language": "Language: {lang}",
+  "admin.dashboard.status.theme": "Theme: {theme}",
+  "admin.dashboard.status.miniapps": "Visible mini-apps: {count}"
 }
