--- a/miniapps/base_shell/i18n/es-419.json
+++ b/miniapps/base_shell/i18n/es-419.json
@@ -126,5 +126,39 @@
   "lang.es": "Español",
   "footer.revision": "{appName} · Revisión {revision} (v{version})",
   "footer.revisionFallback": "{appName} · Revisión no disponible",
-  "footer.revisionLog": "Ver registro de revisiones"
+  "footer.revisionLog": "Ver registro de revisiones",
+  "admin.gateway.inputLabel": "Código administrativo",
+  "admin.dashboard.kicker": "Modo mantenimiento",
+  "admin.dashboard.title": "Centro de comando",
+  "admin.dashboard.subtitle": "Vista unificada para mantener el shell saludable y predecible.",
+  "admin.dashboard.section.overview": "Resumen",
+  "admin.dashboard.metric.users": "Usuarios registrados",
+  "admin.dashboard.metric.users.trend": "{count} usuarios guardados en este dispositivo.",
+  "admin.dashboard.metric.owners": "Administradores",
+  "admin.dashboard.metric.owners.trend": "{percentage}% con privilegios de administrador.",
+  "admin.dashboard.metric.miniapps": "Mini-apps activas",
+  "admin.dashboard.metric.miniapps.trend": "{count} integraciones visibles en la navegación.",
+  "admin.dashboard.metric.uptime": "Disponibilidad",
+  "admin.dashboard.metric.uptime.trend": "{value}% en las últimas 24 horas.",
+  "admin.dashboard.metric.satisfaction": "Satisfacción",
+  "admin.dashboard.metric.satisfaction.trend": "+{points} pts vs. semana anterior.",
+  "admin.dashboard.section.health": "Salud operativa",
+  "admin.dashboard.health.incidents": "Incidentes",
+  "admin.dashboard.health.incidents.none": "No se registraron incidentes en las últimas 48 horas.",
+  "admin.dashboard.health.capacity": "Capacidad",
+  "admin.dashboard.health.capacity.note": "Cola de trabajos operando al {value}% de capacidad.",
+  "admin.dashboard.health.capacity.aria": "Utilización actual al {value}%.",
+  "admin.dashboard.section.activity": "Actividad reciente",
+  "admin.dashboard.activity.anonymous": "Usuario",
+  "admin.dashboard.activity.session": "Sesión activa: {name}.",
+  "admin.dashboard.activity.userCreated": "Último registro: {name}.",
+  "admin.dashboard.activity.activeMiniApp": "Mini-app enfocada: {name}.",
+  "admin.dashboard.activity.environmentReady": "Monitoreo activo sin alertas.",
+  "admin.dashboard.activity.placeholder": "Las actividades recientes aparecerán aquí cuando haya novedades.",
+  "admin.dashboard.action.refresh": "Actualizar métricas",
+  "admin.dashboard.action.openLogs": "Abrir registros",
+  "admin.dashboard.action.manageApps": "Administrar mini-apps",
+  "admin.dashboard.status.language": "Idioma: {lang}",
+  "admin.dashboard.status.theme": "Tema: {theme}",
+  "admin.dashboard.status.miniapps": "Mini-apps visibles: {count}"
 }
