--- a/miniapps/base_shell/i18n/pt-br.json
+++ b/miniapps/base_shell/i18n/pt-br.json
@@ -127,5 +127,39 @@
   "theme.system": "Automático",
   "lang.pt": "Português",
   "lang.en": "Inglês",
-  "lang.es": "Espanhol"
+  "lang.es": "Espanhol",
+  "admin.gateway.inputLabel": "Código administrativo",
+  "admin.dashboard.kicker": "Modo manutenção",
+  "admin.dashboard.title": "Central de comando",
+  "admin.dashboard.subtitle": "Visão consolidada para manter o shell saudável e previsível.",
+  "admin.dashboard.section.overview": "Visão geral",
+  "admin.dashboard.metric.users": "Usuários cadastrados",
+  "admin.dashboard.metric.users.trend": "Total de {count} usuários disponíveis.",
+  "admin.dashboard.metric.owners": "Administradores",
+  "admin.dashboard.metric.owners.trend": "{percentage}% com perfil administrador.",
+  "admin.dashboard.metric.miniapps": "Mini-apps ativos",
+  "admin.dashboard.metric.miniapps.trend": "{count} integrações visíveis no menu.",
+  "admin.dashboard.metric.uptime": "Disponibilidade",
+  "admin.dashboard.metric.uptime.trend": "{value}% nas últimas 24 horas.",
+  "admin.dashboard.metric.satisfaction": "Satisfação",
+  "admin.dashboard.metric.satisfaction.trend": "+{points} pts vs. semana anterior.",
+  "admin.dashboard.section.health": "Saúde operacional",
+  "admin.dashboard.health.incidents": "Incidentes",
+  "admin.dashboard.health.incidents.none": "Nenhum incidente registrado nas últimas 48 horas.",
+  "admin.dashboard.health.capacity": "Capacidade",
+  "admin.dashboard.health.capacity.note": "Fila de jobs operando em {value}% da capacidade.",
+  "admin.dashboard.health.capacity.aria": "Utilização atual em {value}%.",
+  "admin.dashboard.section.activity": "Atividades recentes",
+  "admin.dashboard.activity.anonymous": "Usuário",
+  "admin.dashboard.activity.session": "Sessão ativa: {name}.",
+  "admin.dashboard.activity.userCreated": "Último cadastro: {name}.",
+  "admin.dashboard.activity.activeMiniApp": "Mini-app em foco: {name}.",
+  "admin.dashboard.activity.environmentReady": "Monitoramento ativo e sem alertas.",
+  "admin.dashboard.activity.placeholder": "As atividades recentes aparecem aqui após novos eventos.",
+  "admin.dashboard.action.refresh": "Atualizar métricas",
+  "admin.dashboard.action.openLogs": "Abrir logs",
+  "admin.dashboard.action.manageApps": "Gerenciar mini-apps",
+  "admin.dashboard.status.language": "Idioma: {lang}",
+  "admin.dashboard.status.theme": "Tema: {theme}",
+  "admin.dashboard.status.miniapps": "Mini-apps visíveis: {count}"
 }
